objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Channel_Name__c</fullName>
        <formula>TEXT(Case.Origin)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>Case.Channel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChatEndUserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Live_Chat_Transcripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChatStartURL__c</fullName>
        <description>The page visited by the user prior to launching the chat session</description>
        <inlineHelpText>The last page visited by the user prior to launching the chat session</inlineHelpText>
        <label>Chat Start URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__CurrentEmail__c</fullName>
        <label>CurrentEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>Name</columns>
        <columns>LiveChatVisitor</columns>
        <columns>Status</columns>
        <columns>StartTime</columns>
        <columns>EndTime</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Live_Agent_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>Chat</label>
        <queue>Live_Agent</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>